// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu tests should match snapshot hidden 1`] = `
<DocumentFragment>
  <button
    aria-controls="id"
    aria-expanded="false"
    aria-haspopup="menu"
    type="button"
  >
    Open
  </button>
  .emotion-9 {
  border: 0;
  padding: 0rem;
  outline: none;
  z-index: 999;
}

.emotion-1 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
}

.emotion-1 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-1 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-1:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: rgba(218,227,245,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-1:hover {
  color: #323845;
}

.emotion-1:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-1:disabled {
  color: #898F9E;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  margin-top: 0.25rem;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #C4C5CA;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-8 hr {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #C4C5CA;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    aria-label="menu label"
    aria-orientation="vertical"
    class="emotion-9"
    data-dialog="true"
    data-testid="menu"
    hidden=""
    id="id"
    role="menu"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-8"
      data-testid="menubox"
    >
      <button
        class="emotion-1"
        id="id-1"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="emotion-0"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-1"
        id="id-2"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-0"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-1"
        id="id-3"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-0"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        id="id-4"
        role="menuitem"
        tabindex="-1"
      />
      <button
        class="emotion-1"
        id="id-5"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-0"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu tests should match snapshot visible 1`] = `
<DocumentFragment>
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-haspopup="menu"
    type="button"
  >
    Open
  </button>
  .emotion-9 {
  border: 0;
  padding: 0rem;
  outline: none;
  z-index: 999;
}

.emotion-1 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
}

.emotion-1 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-1 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-1:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: rgba(218,227,245,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-1:hover {
  color: #323845;
}

.emotion-1:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-1:disabled {
  color: #898F9E;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  margin-top: 0.25rem;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #C4C5CA;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-8 hr {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #C4C5CA;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    aria-label="menu label"
    aria-orientation="vertical"
    class="emotion-9"
    data-dialog="true"
    data-testid="menu"
    id="id"
    role="menu"
    tabindex="-1"
  >
    <div
      class="emotion-8"
      data-testid="menubox"
    >
      <button
        class="emotion-1"
        id="id-1"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="emotion-0"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-1"
        id="id-2"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-0"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-1"
        id="id-3"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-0"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        id="id-4"
        role="menuitem"
        tabindex="-1"
      />
      <button
        class="emotion-1"
        id="id-5"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-0"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
